--- a/src/appComponents/DealTypesModule/CompanyData.module.css
+++ b/src/appComponents/DealTypesModule/CompanyData.module.css
@@ -113,32 +113,37 @@
   }
 
   .productImg img {
-    width: 135px;
+    width: 120px;
+    height: 113px;
+}
    
   }
-}
+
 
 /* company text css */
 .companyText{
     align-items: center;
     display: flex;
 }
+
+
+
 .date{
-    display: flex; 
-    align-items: self-end;
-    margin-left: 14px;
-    margin-top: 10px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  margin-top: -7px;
 
 }  
 
 .date p{
     margin-top: 5px;
 }
-.date span img {
+.date  img {
     height: 18.57px;
     margin-right: 6px;
     width: 18.57px;
-    vertical-align: middle;
+    /* vertical-align: middle; */
   }
   
 
@@ -153,18 +158,22 @@
   height: 30px;
   text-align: center;
   padding-top: 5px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   font-size: 13px;
   line-height: 20px;
   
 }
 
 
-@media only screen and (max-width: 400px) {
-    .companyText{
+@media only screen and (max-width: 482px) {
+    /* .companyText{
         padding-top: 20px;
-    }
-    .companyText h2 {
+          align-items: center;
+          display: block;
+      }
+       */
+    
+    /* .companyText h2 {
         font-weight: 600;
         color: #fff;
         border-radius: 14px;
@@ -174,10 +183,37 @@
         height: 30px;
         text-align: center;
         padding-top: 5px;
-        /* margin-top: 15px; */
         font-size: 13px;
         line-height: 20px;
         
-      }
+      } */
 
 }
+
+@media only screen and (min-width: 320px) and (max-width: 400px){
+.companyText h2  {
+  width: 60.63px !important;
+  font-size: 9.4378px !important;
+  height: 21.89px !important;
+  padding-top: 2px !important;
+  color: #fff !important;
+  font-weight: 600;
+}
+}
+.date  img {
+  height: 14.57px;
+  width: 14.57px;
+  margin-right: 3px;
+}
+  
+
+
+.date p{
+  font-size: 9.78876px;
+  line-height: 12px;
+}
+
+
+
+
+
