--- a/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
+++ b/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
@@ -117,3 +117,27 @@
     }
   }
 }
+
+@media screen and (min-width: 992px) {
+  .headerAfterProfile {
+    justify-content: center;
+  }
+
+  .headerAfterProfile h5 {
+    font-size: 14px !important;
+    padding-top: 11px !important;
+  }
+}
+
+ @media only screen and (max-width: 319px){
+  .headerAfterProfile {
+    padding-right: 2px !important;
+    padding-left: 2px !important;
+  }
+
+  .headerAfterProfile h5 {
+    font-size: 13px !important;
+    letter-spacing: unset !important;
+    padding-top: 12px !important;
+  }
+} 
