--- a/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
+++ b/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
@@ -8,7 +8,7 @@
   justify-content: right;
   width: 100%;
   /* max-width: fit-content; */
-  max-width: 357px;
+  max-width: 352px;
   height: 39px !important;
 }
 
@@ -48,6 +48,7 @@
   .headerAfterProfile h5 {
     font-size: 14px !important;
     letter-spacing: unset !important;
+    padding-top: 11px;
   }
 }
 
@@ -72,6 +73,7 @@
   .headerAfterProfile h5 {
     font-size: 14px !important;
     letter-spacing: unset !important;
+    padding-top: 11px;
   }
 }
 
@@ -89,13 +91,13 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 328px) {
-    @-moz-document url-prefix() {
-        .headerAfterProfile h5 {
-            font-size: 13px !important;
-            letter-spacing: unset !important;
-            line-height: 20px;
-        }
+  @-moz-document url-prefix() {
+    .headerAfterProfile h5 {
+      font-size: 13px !important;
+      letter-spacing: unset !important;
+      padding-top: 12px;
     }
+  }
 }
 
 @media screen and (min-width: 339px) and (max-width: 380px) {
@@ -129,7 +131,7 @@
   }
 }
 
- @media only screen and (max-width: 319px){
+@media only screen and (max-width: 319px) {
   .headerAfterProfile {
     padding-right: 2px !important;
     padding-left: 2px !important;
@@ -140,4 +142,4 @@
     letter-spacing: unset !important;
     padding-top: 12px !important;
   }
-} 
+}
