--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -72,7 +72,8 @@
     justify-content: center;
     align-items: center;
     background: none;
-    margin-left: -6px;
+    /* margin-left: -6px; */
+    padding: 0px !important;
 }
 
 .loginformcomponent button {
@@ -178,3 +179,10 @@
         font-size: 12px;
     }
 }
+
+
+
+
+
+
+ 
