--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -45,7 +45,7 @@
 .alertBody .modal-dialog {
     max-width: 342px !important;
     height: 302px;
-    transform: translate(0,140px) !important;
+    transform: translate(0, 140px) !important;
 }
 
 .inputBox .css-b62m3t-container {
@@ -66,5 +66,21 @@
     .inputBox .css-b62m3t-container {
         width: 100%;
         min-width: unset !important
+    }
+}
+
+@media screen and (min-width: 333px) and (max-width: 341px) {
+
+    .nav-pills .nav-link.active,
+    .nav-pills .show>.nav-link {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 361px) and (max-width: 370px) {
+
+    .nav-pills .nav-link.active,
+    .nav-pills .show>.nav-link {
+        font-size: 15px;
     }
 }
