working on remove unused code

--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -202,9 +202,9 @@
     width: 530px;
   }
 
-  .screenOverride .displayNoText {
+  /* .screenOverride .displayNoText {
     width: 530px;
-  }
+  } */
 
   .screenOverride .postAdvertBox {
     width: 530px;
